[package]
name = "rmxmg"
version = "0.1.0"
authors = ["ruescasd <fastness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = {version = "1.11", features = ["integer", "rand", "serde"]}
rand_core = "0.5.0"
rand = "0.7.3"
curve25519-dalek = {version = "3.0.0", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
textplots = "0.5.3"
sha2 = "0.9.1"
bincode = "1.3.1"
rayon = "1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "shuffle_bench"
harness = false