[package]
name = "rmxmg"
version = "0.1.0"
authors = ["ruescasd <fastness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = {version = "1.11", features = ["integer", "rand", "serde"]}
rand_core = "0.5.0"
rand = "0.7.3"
curve25519-dalek = {version = "3.0.0", features = ["serde"]}
ed25519-dalek = {version = "1.0.1", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.1"
sha2 = "0.9.1"
rayon = "1.5"
crepe = "0.1.2"
git2 = "0.13.12"

textplots = "0.5.3"

[dev-dependencies]
criterion = "0.3"
serial_test = "0.5.0"

[[bench]]
name = "shuffle_bench"
harness = false