[package]
name = "rmx"
version = "0.1.0"
authors = ["ruescasd <fastness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = {version = "1.11", features = ["integer", "rand", "serde"]}

rand = "0.7.3"
curve25519-dalek = {version = "3.0.0", features = ["serde"]}
ed25519-dalek = {version = "1.0.1", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.1"
sha2 = "0.9.1"
rayon = "1.5"
crepe = "0.1.2"
git2 = "0.13.12"
walkdir = "2.3.1"
tempfile = "3.1.0"
uuid = { version="0.8.1", features = ["serde", "v4"]}
aes = "0.6.0"
block-modes = "0.7.0"
hex-literal = "0.3.1"
hex = "0.4.2"
generic-array = "0.14.4"
chrono = "0.4"
textplots = "0.5.3"
base64 = "0.13.0"
strum = { version = "0.20", features = ["derive"] }
cursive = "0.15"
simplelog = "0.9.0"
log = "0.4.11"

[dev-dependencies]
criterion = "0.3"
serial_test = "0.5.0"

[[bench]]
name = "shuffle_bench"
harness = false

[[bench]]
name = "signature_bench"
harness = false

[[bench]]
name = "hash_file_bench"
harness = false